
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#6007] Stop upgrade from overwriting session_cookie_path system setting
- [#5998] Add "Create File" option for stream-based media sources
- [#4794] Add custom Permissions for restricting creation of core derivative Resource Types
- [#4958] Add Resource ID to node of Resource in Resource Groups tree
- [#5434] Change manager page title to use site_name as prefix instead of MODX
- [#4875] Add ability to download file from Files tree
- [#5997] Fix issue where in advanced installs with moved web path, assets directory is improperly created
- [#5990] Fix issue where content types were not listable in Resource dropdowns
- [#232] Enable option to render target URL for WebLinks
- [#5963] Fix issue with Static Elements and their Source being None
- [#5936] Fix issue where Quick Update Resource was too high on smaller screens
- Fix issue with phpThumb and zoom crop
- [#5983] Fix adding/updating a provider window duplicating "username" field.[#5948] Ensure that menu item for Change Profile is added on build
- [#5985] Fix updating a provider not showing username
- [#5978] [ReUp] [#5978] Fix missing fields/tabs in actions XML causing issues with form customization on resource/create
- [#5938] Optimize modResource->getTVValue() using parser source cache when available
- [#5973] Prevent empty user groups being loaded for anonymous users
- [#5962] Fix phptype in modContextResource.resource field definition
- [#5050], [#5366], [#5781] Various xPDO Database Caching Fixes (xPDO 2.2.0-rc2)
- [#4830] Prevent removal of Content Types that are in use
- [#5293] Prevent drag/drop from Resource Group tree to Resource tree in Resource Group page
- [#4433] Validate paths in setup for trailing slash
- [#564], [#4506] Make Workspace path portable by allowing path setting replacements