@@ -11,6 +11,8 @@ $_lang['dashboard_add'] = 'Add Dashboard';
 $_lang['dashboard_create'] = 'Create Dashboard';
 $_lang['dashboard_desc_name'] = 'The name of the Dashboard.';
 $_lang['dashboard_desc_description'] = 'A short description of the Dashboard.';
+$_lang['dashboard_desc_hide_trees'] = 'Checking this will hide the left-hand trees when this Dashboard is rendered on the welcome page.';
+$_lang['dashboard_hide_trees'] = 'Hide Left-Hand Trees';
 $_lang['dashboard_duplicate'] = 'Duplicate Dashboard';
 $_lang['dashboard_remove'] = 'Delete Dashboard';
 $_lang['dashboard_remove_confirm'] = 'Are you sure you want to remove this Dashboard?';
