@@ -404,9 +404,13 @@
     <object class="modDashboard" table="dashboard" extends="xPDOSimpleObject">
         <field key="name" dbtype="varchar" precision="255" phptype="string" null="false" default="" index="index" />
         <field key="description" dbtype="text" phptype="string" />
+        <field key="hide_trees" dbtype="tinyint" precision="1" attributes="unsigned" phptype="boolean" null="false" default="0" index="index" />
         
         <index alias="name" name="name" primary="false" unique="false" type="BTREE">
             <column key="name" length="" collation="A" null="false" />
+        </index>
+        <index alias="hide_trees" name="hide_trees" primary="false" unique="false" type="BTREE">
+            <column key="hide_trees" length="" collation="A" null="false" />
         </index>
 
         <aggregate alias="UserGroups" class="modUserGroup" local="id" foreign="dashboard" cardinality="many" owner="local" />
